тест на оптимистик добавлен